--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -327,7 +327,7 @@
 
         \item En $(\bb{R}, \cc{T}_u)$, $[a,b]\cong [0,1]$\ \ $\forall a<b$ pero $[a,b]\ncong [c, +\infty)$ (lo demostraremos en el Tema 3).
         
-        \item \textbf{Proyección estereográfica:} Esta proyección (para $n=3$) prueba que una esfera a la que se le quita un punto es homeomorfa a un plano. Para ello podemos trazar la recta que va desde el polo norte de la esfera (el punto que le falta a la esfera) hacia cualquier punto $p$ y hayar la intersección de dicha recta con el plano que resulta de poner la última coordenada a 0. Dicha intersección será $\Phi(p)$ y repitiendo esto con todos los puntos obtengo el plano con última coordenada 0. Veámoslo analíticamente:
+        \item \textbf{Proyección estereográfica:} Esta proyección (para $n=3$) prueba que una esfera a la que se le quita un punto es homeomorfa a un plano. Para ello podemos trazar la recta que va desde el polo norte de la esfera (el punto que le falta a la esfera) hacia cualquier punto $p$ de la esfera y hallar la intersección de dicha recta con el plano que resulta de poner la última coordenada a 0. Dicha intersección será $\Phi(p)$ y repitiendo esto con todos los puntos obtengo el plano con última coordenada 0. Veámoslo analíticamente:
         
         Sea $\bb{S}^{n}=\{x_1, \dots, x_n, x_n+1 : x_1^2 + \dots + x_n^2 + x_{n+1}^2 = 1\} = S((0,\dots,0,0), 1)\subset \bb{R}^{n+1}$. Sea $N=(0,\dots,0,1)\in \bb{S}^n$ el polo norte. Podemos definir la aplicación 
         \begin{align*}
