--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -332,29 +332,69 @@
         Sea $\bb{S}^{n}=\{x_1, \dots, x_n, x_n+1 : x_1^2 + \dots + x_n^2 + x_{n+1}^2 = 1\} = S((0,\dots,0,0), 1)\subset \bb{R}^{n+1}$. Sea $N=(0,\dots,0,1)\in \bb{S}^n$ el polo norte. Podemos definir la aplicación 
         \begin{align*}
             \Phi : \bb{S}^n\setminus \{N\} &\to \bb{R}^n\\
-            (x_1, \dots, x_n, x_{n+1}) &\mapsto \frac{1}{1-x_{n+1}}(x_1, \dots, x_n)\in \bb{R}.
+            (x_1, \dots, x_n, x_{n+1}) &\mapsto \frac{1}{1-x_{n+1}}(x_1, \dots, x_n)\in \bb{R}^n.
         \end{align*}
 
-        %TODO: dibujo
+        % TODO: dibujo
 
-        % \begin{center}
-        %     \begin{tikzpicture}
+        \begin{center}
+            \begin{tikzpicture}
 
-        %         \filldraw[line width=0.1pt, fill=gray!20] (0,0) circle (2cm);
-        %         \filldraw[fill=red!20, draw=red] (-3.5,-1.5) -- (2,-1.5) -- (4, 1) -- (-1.5, 1) --cycle; 
+                % Plano
+                \filldraw[thick, draw=red, fill=red!20] (-6,-2) -- (2,-2) -- (6,2) -- (-2,2) -- cycle;
+
+                % Esfera principal
+                \fill[line width=0.1pt, fill=gray!20] (0,0) circle (2cm);
+                % \filldraw[fill=red!20, draw=red] (-3.5,-1.5) -- (2,-1.5) -- (4, 1) -- (-1.5, 1) --cycle; 
                 
-        %         \draw[thick, dashed] (0,-2) -- (0,2);
-        %         \draw[thick] (0,2) -- (0,3);
-        %         \draw[thick] (0,-2) -- (0,-3);
+                \draw[red, thick, dashed] (2,0) arc[start angle=0, end angle=180, x radius=2, y radius=1];
 
-        %         \draw[thick, dashed] (-2,0) -- (2,0);
-        %         \draw[thick] (2,0) -- (3,0);
-        %         \draw[thick] (-2,0) -- (-3,0);
+                \fill[red!10, thick] (-2,0) arc[start angle=180, end angle=360, x radius=2, y radius=1] -- (2,0) arc[start angle=360, end angle=180, x radius=2, y radius=2] -- cycle;
+                % \draw[red, thick,] (0,0) ellipse (2 and 1);
 
-        %         \draw[thick, dashed] (-2,-2) -- (2,2);
+                % Parte inferior de la elipse
+                \draw[red, thick] (-2,0) arc[start angle=180, end angle=360, x radius=2, y radius=1];
 
-        %     \end{tikzpicture}
-        % \end{center}
+                % Contorno circunferencia
+                \draw[line width=0.1pt, dashed](2,0) arc[start angle=360, end angle=180, x radius=2, y radius=2];
+                \draw[line width=0.1pt](2,0) arc[start angle=0, end angle=180, x radius=2, y radius=2];
+
+                % Eje vertical
+                \draw[thick, dashed] (0,-2) -- (0,2);
+                \draw[thick] (0,2) -- (0,3);
+                \draw[thick] (0,-2) -- (0,-3);
+
+                % Eje horizontal
+                \draw[thick, dashed] (-2,0) -- (2,0);
+                \draw[thick] (2,0) -- (5,0);
+                \draw[thick] (-2,0) -- (-5,0);
+                
+                % Eje oblícuo
+                \def\longitud{1.4142}
+                \def\longitudd{0.95}
+                \draw[thick, dashed] (-\longitudd,-\longitudd) -- (\longitud,\longitud);
+                \draw[thick] (-2.5,-2.5) -- (-\longitudd,-\longitudd);
+                \draw[thick] (\longitud,\longitud) -- (2.5,2.5);
+                
+                % Recta
+                \draw[blue, thick] (1,3) -- (0,2);
+                \draw[dashed, blue, thick] (0,2) -- (-1,1);
+                \draw[blue, thick] (-1,1) -- (-3,-1);
+                \draw[dashed, blue, thick] (-3,-1) -- (-4,-2);
+                \draw[blue, thick] (-4,-2) -- (-5,-3);
+
+                % Polo norte
+                \filldraw[fill=white] (0,2) circle (1.5pt) node[above left]{$N$};
+
+                % Punto p
+                \fill[fill=blue] (-1,1) circle (1.5pt) node [above left] {\textcolor{blue}{$p$}};
+
+                % Punto \Phi(p)
+                \fill[fill=blue] (-3,-1) circle (1.5pt) node [above left] {\textcolor{blue}{$\Phi(p)$}};
+
+
+            \end{tikzpicture}
+        \end{center}
 
         Su inversa es 
         \begin{align*}
