--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -406,7 +406,7 @@
         \begin{align*}
             \Phi:(\bb{S}^n\setminus \{N\}, \cc{T}_{|\bb{S}^n\setminus \{S\}}) \to (\bb{R}^n, \cc{T}_u)
         \end{align*}
-        es un homeomorfismo ya que, como estamos en la topología usual podemos usar la intuición del análisis y ver que tanto $\Phi$ como $\Phi^-1$ son continuas y es fácil ver que $\Phi \circ \Phi^{-1} = Id_{\bb{S}^n\setminus \{N\}}$.
+        es un homeomorfismo ya que, como estamos en la topología usual podemos usar la intuición del análisis y ver que tanto $\Phi$ como $\Phi^{-1}$ son continuas y es fácil ver que $\Phi \circ \Phi^{-1} = Id_{\bb{S}^n\setminus \{N\}}$.
 
         Esta proyección se usa para hacer mapas de la Tierra, y por eso se producen deformaciones en la representación del mapa mundi. Hay mejores proyecciones para esto. Veamos la que viene a continuación:
 
