--- a/documents/Topología_I/main.tex
+++ b/documents/Topología_I/main.tex
@@ -19,7 +19,7 @@
     \newpage
     \thispagestyle{empty}
 
-    \input{Tema_1.tex}
+    % \input{Tema_1.tex}
     \newpage
     \input{Tema_2.tex}
     % \chapter{Relaciones de Problemas}
