--- a/documents/Probabilidad/Ejercicios_Clase_6.tex
+++ b/documents/Probabilidad/Ejercicios_Clase_6.tex
@@ -1,4 +1,120 @@
-\section{Trabajo de clase del lunes 14 de Octubre de 2024}
+\section{Trabajo de clase del lunes 28 de Octubre de 2024}
 
-% HACER EJERCICIO 7 de la RELACIÓN 2
- 
+\begin{ejercicio}
+    Sea $X=(X_1,X_2)$ y dada la tabla
+
+    \begin{center}
+        \begin{tabular}{c | ccc | c}  
+            $X_2\backslash X_1$ & -1 & 0 & 1& \\ 
+            \hline
+            -2 & \nicefrac{1}{6} & \nicefrac{1}{12} & \nicefrac{1}{6}& \\
+            1 & \nicefrac{1}{6} & \nicefrac{1}{12} & \nicefrac{1}{6}& \\
+            2 & \nicefrac{1}{12} & 0 & \nicefrac{1}{12}& \\
+            \hline
+            &&&&\\
+        \end{tabular}
+    \end{center}
+    Hallar la función masa de probabilidad conjunta de $Y=(|X_1|, X_2^2)$.\\
+
+    \begin{align*}
+        P[Y=(0,1)] &= P[X_1=0, X_2=1] = \nicefrac{1}{12}\\
+        P[Y=(1,1)] &= P[X_1=-1, X_2 = 2] + P[X_1=1, X_2=1] = \nicefrac{1}{6} + \nicefrac{1}{6} = \nicefrac{1}{3}\\
+        P[Y=(0,4)] &= P[X_1=1, X_2=-2] + P[X_1=0, X_2=2] = \nicefrac{1}{12} + 0 = \nicefrac{1}{12}\\
+        P[Y=(1,4)] &= P[X_1=-1, X_2=-2] + P[X_1=1, X_2=-2]\\
+        &\phantom{=} +P[X_1=1, X_2=2] + P[X_1=-1, X_2=2] = \nicefrac{1}{6} + \nicefrac{1}{6} + \nicefrac{1}{12} + \nicefrac{1}{12} = \nicefrac{1}{2}
+    \end{align*}
+
+    Y obtenemos la siguiente tabla de fmp:
+    \begin{center}
+        \begin{tabular}{c | cc | c}  
+            $X_2^2\backslash |X_1|$ & 0 & 1& \\ 
+            \hline
+            1 & \nicefrac{1}{12}& \nicefrac{1}{3}\\
+            4 & \nicefrac{1}{12}& \nicefrac{1}{2}\\
+            \hline
+            &&&\\
+        \end{tabular}
+    \end{center}
+
+\end{ejercicio}
+
+\begin{ejercicio}
+    Sea $X=(X_1, X_2)$ el vector aleatorio continuo que tiene por función de densidad
+    \begin{gather*}
+        f_X(x_1, x_2) = \lambda \mu e^{-\lambda x_1} e^{-\mu x_2} \ \ \text{ con }\  x_1, x_2>0,\ \  \lambda, \mu>0 \text{ constantes }
+    \end{gather*}
+    Sea la transformación 
+    \begin{gather*}
+        Y=\left\{
+        \begin{array}{ccc}
+            0 & \text{ si } & x_1 > x_2\\
+            1 & \text{ si } & x_1 < x_2
+        \end{array}
+        \right.
+    \end{gather*}
+    Calcula la función masa de probabilidad de $Y$.\\
+
+    Para ello tendremos que calcular la probabilidad de que $Y$ sea igual a 1 y la probabilidad de que $Y$ sea igual a 0, es decir:
+    \begin{align*}
+        P[Y=0] &= P[X_1 > X_2] = \lambda \mu \int_0^{\infty}\int_{x_2}^{\infty} e^{-\lambda x_1} e^{-\mu x_2} dx_1 dx_2 \\
+        &= \lambda \mu \int_0^{\infty} e^{-\mu x_2} \cdot \left[-\frac{e^{-\lambda x_1}}{\lambda}\right]_{x_2}^{\infty} dx_2 = \mu \int_0^{\infty} e^{-\mu x_2} \cdot (-0 + e^{-\lambda x_2}) dx_2 \\
+        &= \mu \int_0^{\infty} e^{(-\lambda -\mu)x_2}dx_2 = \mu \left[\frac{e^{(-\lambda -\mu)x_2}}{\lambda + \mu}\right]_0^{\infty} = \mu \left(-0+\frac{1}{\lambda + \mu}\right) = \frac{\mu}{\lambda + \mu}\\
+        P[y=1] &= P[X_1 < X_2] = 1 - P[X_1 > X_2]  =1 - \frac{\mu}{\lambda + \mu}= \frac{\lambda}{\lambda + \mu}
+     \end{align*}
+\end{ejercicio}
+
+\begin{ejercicio}(Ejercicio 3 de la relación 2 parte 2)
+
+    Tenemos que $f_X(x,y)=1$ para $0<x<1$, $0<y<1$.
+    \begin{gather*}
+        (Z,T)=(X+Y, X-Y)
+    \end{gather*}
+
+    \begin{align*}
+        Z=X+Y\\
+        \underline{T=X-Y}\\
+        Z-T = 2Y
+    \end{align*}
+    \begin{gather*}
+        X=Z-Y = Z - \frac{Z-T}{2} = \frac{Z+T}{2}\\
+        Y=\frac{Z-T}{2}\\
+    \end{gather*}
+    \begin{gather*}
+        J_{g^{-1}} = 
+        \begin{vmatrix}
+            \nicefrac{1}{2} & \nicefrac{1}{2}\\
+            \nicefrac{1}{2} & \nicefrac{1}{2}
+        \end{vmatrix} = -\nicefrac{1}{2} \neq 0
+    \end{gather*}
+    Por lo que $g^{-1}(z,t)=\left(\frac{Z+T}{2}, \frac{Z-T}{2}\right) \Rightarrow f_{Z,T}(z,t) = f_{X,Y}\left(\frac{z+t}{2}, \frac{z-t}{2} \right)\cdot |J| = 1 \cdot |-\nicefrac{1}{2}| = \nicefrac{1}{2}$. Por tanto llegamos a 
+
+    \begin{gather*}
+        f_{Z,T}(z,t)=\left\{
+        \begin{array}{ccc}
+            \nicefrac{1}{2}& \text{ si } & 0<z+t<2 \ \vee \  0<z-t<2\\
+            0 & \text{ sino } & 
+        \end{array}
+        \right.
+    \end{gather*}
+    Pasamos a calcular las marginales:
+    \begin{gather*}
+        f_Z(z) =\left\{
+        \begin{array}{ccc}
+            \int_{-z}^{+z} \nicefrac{1}{2}dt=z & \text{ si } & 0<z<1\\
+            \int_{z-2}^{2-z}\nicefrac{1}{2}dt = 2-z & \text{ si } & 1<z<2\\
+        \end{array}
+        \right.
+    \end{gather*}
+    \begin{gather*}
+        f_T(t) =\left\{
+        \begin{array}{ccc}
+            t+1 & \text{ si } & -1<t<0\\
+            1-t & \text{ si } & 0<t<1\\
+        \end{array}
+        \right.
+    \end{gather*}
+    Veamos ahora lo que sucede con la siguiente transformación:
+    \begin{gather*}
+        (Z,T) = \left(\frac{X}{Y}, XY\right)
+    \end{gather*}
+\end{ejercicio}
