--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -28,4 +28,6 @@
     \input{Ejercicios_Clase_5.tex}
     \newpage
     \input{Ejercicios_Clase_6.tex}
+    \newpage
+    \input{Ejercicios_Clase_7.tex}
 \end{document}
