--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -30,4 +30,6 @@
     \input{Ejercicios_Clase_6.tex}
     \newpage
     \input{Ejercicios_Clase_7.tex}
+    \newpage
+    \input{Ejercicios_Clase_8.tex}
 \end{document}
