--- a/documents/Topología_I/Tema_1.tex
+++ b/documents/Topología_I/Tema_1.tex
@@ -542,7 +542,7 @@
         \item Ni $\cc{B}$ ni la familia $\{B_i\}_{i\in I}$ tienen que ser finitas o numerables
         \item La forma de escribir $U=\bigcup\limits_{i\in I} B_i$ puede no ser única.
         \item $\cc{T}$ es base de $\cc{T}$ (trivialmente).
-        \item Si $\cc{B}\subset \cc{B}'\subset \cc{T}$ con $\cc{B}$, entonces $\cc{B}'$ es base de $\cc{T}$.
+        \item Si $\cc{B}\subset \cc{B}'\subset \cc{T}$ con $\cc{B}$ base de $\cc{T}$, entonces $\cc{B}'$ es también base de $\cc{T}$.
     \end{itemize}
     \endsquare
 \end{observacion}
@@ -569,7 +569,7 @@
 
 \begin{ejemplo}\
     \begin{itemize}
-        \item Sea $(X,\cc{T}_d)$ un e.m. La familia $base=\{B(x,r):x\in X, r>0\}$ de todas las bolas abiertas es una base de $\cc{T}_d$.
+        \item Sea $(X,\cc{T}_d)$ un e.m. La familia $\cc{B} =\{B(x,r):x\in X, r>0\}$ de todas las bolas abiertas es una base de $\cc{T}_d$.
         \item En $(\bb{R},\cc{T}_u)$, $\cc{B}_u=\{(a,b):a<b\}$ es base de $\cc{T}_u$ y se le llama \textbf{base usual}.
         \item En $(\bb{R},T_u)$, $\cc{B}=\{(a,b): a,b\in \bb{Q},\ a<b\}$ es base de $\cc{T}_u$ (por la densidad de $\bb{Q}$ en $\bb{R}$).
         \item En $(\bb{R}^n, \cc{T}_u)$, $\cc{B}_u=\{B(x,r): x\in \bb{R}^n, r>0\}$ es la base usual. $(\bb{R}^n, \cc{T}_u)$, $\cc{B}_u=\{B(x,r): x\in \bb{R}^n, r\in \bb{Q}, r>0\}$ también es base de $\cc{T}_u$ (numerable).
