--- a/documents/Topología_I/Tema_1.tex
+++ b/documents/Topología_I/Tema_1.tex
@@ -663,7 +663,7 @@
 \begin{prop}
     Sean $X\neq \emptyset$ y $S\subset \cc{P}(X)$, $S\neq \emptyset$, Entonces, 
     \begin{gather*}
-        \cc{B}(S)=\left\{\bigcap\limits_{i\in I}: I \text{ finito, }S_i \in S\ \ \forall i \in I\right\}
+        \cc{B}(S)=\left\{\bigcap\limits_{i\in I}S_i: I \text{ finito, }S_i \in S\ \ \forall i \in I\right\}
     \end{gather*}
     Es base de una única topología $\cc{T}(S)=\cc{T}(\cc{B}(S))$ en $X$. A esta topología la llamaremos la \textbf{topología generada} por $S$ y es la topología menos fina que contiene a $S$, es decir, si $(X,\cc{T}')$ es un e.t. y $S\subset \cc{T}'$, entonces $\cc{T}(S)\leq \cc{T}'$.\\
 
