--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -777,3 +777,6 @@ En esta sección estudiaremos cómo a partir de dos e.t. $(X, \cc{T})$, $(Y, \cc
         \end{itemize}
     \end{proof}
 \end{prop}
+
+% TODO: Copiar lo dado en clase los días 31 de obtubre y 6 de noviembre (pedir a Quique)
+
